@@ -43,6 +43,7 @@ Version 1.8.0+git:
    * Fixed `[show_quick_debug]`, `[show_side_debug]` and `[prompt] (they didn't work on the 1.15.x series)
    * Increased the width of the `[show_quick_debug]` dialog to allow displaying the upkeep radiobuttons
    * Fixed `[flash_color]`, `[flash_screen]` and `[animate_path]` not working on 1.15.x due to a "number has no integer representation" error
+   * Fixed a variable in debug_utils that didn't work any more due to strict mode
    * Bumped Wesnoth version requirement to 1.15.14
 
 Version 1.8.0:
